# ROS-Rasberry-pi5

./: .gitignore  HARDWARE.md  QUICKSTART.md  README.md  TOPICS.md  TROUBLESHOOTING.md  follow.py  requirements.txt  setup.sh
esp32_firmware/: CMakeLists.txt
esp32_firmware/main/: main.c
esp32_firmware/src/: main.cpp
examples/: README.md  hardware_motor_driver.py
install/: local_setup.sh  setup.sh
install/lib/my_first_pkg/: follow
install/share/my_first_pkg/: package.dsv  package.ps1  package.sh
install/share/my_robot_description/: package.dsv  package.ps1  package.sh
launch/: balance_car_full.launch.py
log/: latest_build
sbr_nodes/: package.xml  setup.cfg  setup.py
sbr_nodes/sbr_nodes/: follow_node.py  follow_original.py  image_simulator.py  serial_bridge.py  vision_commander.py
scripts/: build_gz_sim.sh
src/ESP32_connection_pkg/: CMakeLists.txt  package.xml
src/ESP32_connection_pkg/launch/: follow_with_sim.launch.py  simulation.launch.py
src/ESP32_connection_pkg/scripts/: esp32_bridge.py
src/ESP32_connection_pkg/urdf/: my_robot.urdf.xacro
src/balance_car_control/: package.xml  setup.cfg  setup.py
src/balance_car_control/balance_car_control/: balance_controller.py  motor_controller.py
src/balance_car_control/config/: control_params.yaml
src/balance_car_control/launch/: control.launch.py
src/balance_car_vision/: package.xml  setup.cfg  setup.py
src/balance_car_vision/balance_car_vision/: camera_node.py  vision_processor.py
src/balance_car_vision/config/: vision_params.yaml
src/balance_car_vision/launch/: vision.launch.py
src/follow_pkg/: package.xml  setup.cfg  setup.py
src/follow_pkg/include/my_first_pkg/: CMakeLists.txt
src/follow_pkg/resource/: follow_pkg
src/my_first_pkg/: package.xml  setup.py
src/my_first_pkg/my_first_pkg/: follow.py
src/my_first_pkg/src/: talker.cpp
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/launch/: follow_with_sim.launch.py  simulation.launch.py
src/my_robot_description/worlds/: vision_follow.world
