[metadata]
name = my_first_pkg
version = 0.0.0

[develop]
script_dir=$base/lib/my_first_pkg

[install]
install_scripts=$base/lib/my_first_pkg

[options]
packages = find:
install_requires =
    setuptools
    rclpy
    sensor_msgs
    geometry_msgs
zip_safe = True

[options.entry_points]
console_scripts =
    follow = my_first_pkg.follow:main
